[package]
name = "do-everything-like-a-god"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
html-escape = "0.2"
urlencoding = "2.1"
proptest = "1.4"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["File", "Blob", "FileReader", "FileList", "HtmlInputElement"] }
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
hex = "0.4"
uuid = { version = "1.8", features = ["v4", "js"] }
regex = "1.10"
chrono = "0.4"
similar = "2.5"
